fix stretching

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,10 @@
   display: flex;
   max-width: 810px;
 }
+
+@media (max-width: 376px){
+  .top{
+    max-width: 360px;
+  }
+}
+  
