--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -30,3 +30,9 @@ button:active{
     height: 110px;
     margin-left: 8px;
 }
+
+@media (max-width: 376px){
+  button{
+    max-width: 75px;
+  }
+}
